# stratum

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  SECURITY.md  deny.toml  dist-workspace.toml  index.html  oranda-workspace.json  release-plz.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: checks.yml  ci.yml  release-post-announce.yml
arena/: Cargo.toml  README.md
arena/src/: error.rs  id.rs  interner.rs  lib.rs  store.rs
be/debug/codeview/: Cargo.toml  README.md
be/debug/codeview/src/: adapt.rs  codec.rs  consts.rs  lib.rs  table.rs
be/debug/codeview/tests/: malformed.rs  provenance.rs
be/debug/dwarf/: Cargo.toml  README.md
be/debug/dwarf/src/: adapt.rs  codec.rs  consts.rs  lib.rs  table.rs
be/debug/dwarf/tests/: malformed.rs  provenance.rs
be/object/driver/: Cargo.toml  README.md
be/object/driver/src/: lib.rs
be/object/elf/: Cargo.toml  README.md
be/object/elf/src/: consts.rs  lib.rs  native.rs  samples.rs  write.rs
be/object/elf/tests/: hello.rs  roundtrip.rs
be/object/elf/tests/support/: mod.rs
be/object/macho/: Cargo.toml  README.md
be/object/macho/src/: codesign.rs  consts.rs  convert.rs  lib.rs  read.rs  samples.rs  sha256.rs  write.rs
be/object/macho/tests/: hello.rs  roundtrip.rs
be/object/pe/: Cargo.toml  README.md
be/object/pe/src/: consts.rs  lib.rs  read.rs  samples.rs  write.rs
be/object/pe/tests/: hello.rs  roundtrip.rs
be/object/wasm/: Cargo.toml  README.md
be/object/wasm/src/: consts.rs  lib.rs  read.rs  samples.rs  write.rs
be/object/wasm/tests/: hello.rs  roundtrip.rs
diagnostics/: Cargo.toml  README.md
diagnostics/src/: diagnostic.rs  error.rs  lib.rs  source_map.rs  span.rs
docs/: architecture.md
fe/c/ast/: Cargo.toml  README.md
fe/c/ast/src/: dump.rs  error.rs  lib.rs  node.rs  ops.rs  tree.rs
fe/c/ast/tests/: dump.rs
fe/c/bridge/: Cargo.toml  README.md
fe/c/bridge/src/: bridge.rs  error.rs  expr.rs  lib.rs  lit.rs  lower.rs  raise.rs  stmt.rs  test_utils.rs  ty.rs
fe/c/bridge/tests/: raise.rs  roundtrip.rs
fe/c/driver/: Cargo.toml  README.md
fe/c/driver/src/: error.rs  lib.rs  main.rs  render.rs
fe/c/driver/tests/: cli.rs  snapshot.rs
fe/c/driver/tests/fixtures/: arith.hir  control_flow.c  control_flow.hir  macros.c  macros.hir
fe/c/driver/wix/: main.wxs
fe/c/lexer/: Cargo.toml  README.md
fe/c/lexer/src/: error.rs  lexer.rs  lib.rs  tests.rs  token.rs
fe/c/parser/: Cargo.toml  README.md
fe/c/parser/src/: decl.rs  error.rs  expr.rs  finalize.rs  lib.rs  parser.rs  stmt.rs  tests.rs
fe/c/parser/tests/: declarations.rs  diagnostics.rs  dialects.rs  expressions.rs  initializers.rs  statements.rs  types.rs
fe/c/parser/tests/common/: mod.rs
fe/c/preprocessor/: Cargo.toml  README.md
fe/c/preprocessor/src/: error.rs  eval.rs  include.rs  lib.rs  macros.rs  preprocessor.rs  tests.rs  util.rs
fe/c/preprocessor/tests/: conditionals.rs  directives.rs  function_macros.rs  includes.rs  object_macros.rs
fe/c/preprocessor/tests/common/: mod.rs
fe/c/sema/: Cargo.toml  README.md
fe/c/sema/src/: analyze.rs  lib.rs  symbol.rs  tests.rs
hir/: Cargo.toml  README.md
hir/src/: bridge.rs  context.rs  dump.rs  error.rs  node.rs  types.rs
ir/hir/: README.md
ir/hir/src/: bridge.rs  dump.rs  lib.rs  node.rs  types.rs
ir/oir/: Cargo.toml  README.md
ir/oir/src/: bridge.rs  bytes.rs  debug.rs  dump.rs  error.rs  lib.rs  linkage.rs  model.rs  reloc.rs  target.rs
stratum/: index.html
utils/: Cargo.toml  README.md
utils/src/: lib.rs
