[package]
name = "stratum_arena"
description = "Index-based arena and string interning infrastructure for the Stratum compiler"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
stratum_utils.workspace = true
