[package]
name = "stratum_diagnostics"
description = "Source maps, spans with provenance, and compiler diagnostics for Stratum"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true
