[package]
name = "stratum_pe"
description = "PE/COFF read/write codec mapping to and from the Stratum object model"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
stratum_oir.workspace = true

[lints]
workspace = true
