[package]
name = "stratum_c_preprocessor"
description = "C preprocessor (includes, macros, conditionals) for Stratum"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
std = []

[dependencies]
stratum_arena.workspace = true
stratum_diagnostics.workspace = true
stratum_c_lexer.workspace = true
stratum_utils.workspace = true

[lints]
workspace = true
